--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.5.12"
+    "firebase": "^10.14.1",
+    "vue": "^3.5.12",
+    "vuefire": "^3.2.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
